--- a/requirements.txt
+++ b/requirements.txt
@@ -7,6 +7,7 @@ django-heroku==0.3.1
 django-registration==2.4.1
 django-tinymce==2.8.0
 djangorestframework==3.10.3
+gunicorn==20.0.2
 Pillow==6.2.1
 psycopg2==2.8.4
 python-decouple==3.3
